[gd_scene format=3 uid="uid://bm3xjm4wqxkxo"]

[ext_resource type="Script" uid="uid://d05y54xpjhyvg" path="res://scripts/iteration_0.gd" id="1_1h2vp"]

[node name="Iteration0" type="Node2D" unique_id=453919418]
script = ExtResource("1_1h2vp")

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=825132167]

[node name="DialogueBox" type="Panel" parent="CanvasLayer" unique_id=1661311257]
visible = false
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -150.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/DialogueBox" unique_id=53346399]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/DialogueBox/MarginContainer" unique_id=95480356]
layout_mode = 2

[node name="NPCName" type="Label" parent="CanvasLayer/DialogueBox/MarginContainer/VBoxContainer" unique_id=873260462]
layout_mode = 2
text = "NPC Name"

[node name="DialogueText" type="Label" parent="CanvasLayer/DialogueBox/MarginContainer/VBoxContainer" unique_id=579904052]
layout_mode = 2
text = "Dialogue text goes here..."
autowrap_mode = 3

[node name="InteractPrompt" type="Label" parent="CanvasLayer" unique_id=289310048]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
text = "Press C to chat"
horizontal_alignment = 1
